# STAMP

./: CMakeLists.txt  LICENSE.txt  README.md  main.cc  temp_test.cc
protocols/: protocols.h
stamp-client/: session-sender.cc  session-sender.h  stamp-client.cc
stamp-library/: bytes.cc  bytes.h  hmac.cc  hmac.h  protocols.cc  socket.cc  socket.h  timestamp.cc  timestamp.h
stamp-server/: session-reflector.cc  session-reflector.h  stamp-server.cc
utils/: bytes.cc  bytes.h  socket.cc  socket.h  timestamp.cc  timestamp.h  udp_socket.cc  udp_socket.h
